# forest_cover

./: .gitignore  README.md  mypy.ini  noxfile.py  pyproject.toml  train.ini
src/forest_cover/: data.py  pipeline.py  predict_fc.py  prof_data.py  train.ini  train.py
tests/: forest-cover-test.csv
