[tool.poetry]
name = "forest_cover"
version = "0.1.0"
description = "Forest cover prediction project"
authors = ["NataLobster <nlobanok@yandex.ru>"]

[tool.poetry.scripts]
prof_data = "forest_cover.prof_data:prof"
train = "forest_cover.train:train"
predict_fc = "forest_cover.predict_fc:train"

[tool.poetry.dependencies]
python = "^3.9"
click = "8.0.3"
pandas = "1.3.5"
pandas-profiling = "^3.1.0"
sklearn = "^0.0"
scikit-learn = "^1.0.1"
mlflow = "^2.3.1"
nox = "^2022.1.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "21.11b1"
mypy = "^0.910"
flake8 = "^4.0"
nox = "^2022.1"

[tool.black]
line-length = 79

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
